# floppix

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README  README.md
Client/: .gitignore  Makefile
Client/docs/: Doxyfile
Client/inc/: connect.h  error_proc.h  platform.h  sockets.h
Client/src/: connect.c  main.c
Client/src/os/: sockets.c
Client/test/: Makefile  mocks_handler.h  tests.c
Server/: Makefile  config.conf  server.conf
Server/docs/: Doxyfile
Server/include/: config.h  connection.h  core.h  cycle.h  daemon.h  error_proc.h  errors.h  events.h  files.h  list.h  listen.h  memory.h  mempool.h  platform.h  pools.h  process.h  sockets.h  sys_errno.h  sys_files.h  sys_sockets.h  syshead.h  syslog.h  xxx_errors.h  xxx_mempool.h  xxx_process.h  xxx_sockets.h  xxx_syslog.h  xxx_system.h
client/: .gitignore  CMakeLists.txt  Makefile
client/include/: mainwindow.h
client/src/: main.cpp  mainwindow.cpp
cmake/: fpx_config.cmake  fpx_options.cmake  fpx_system_config.h.in  hcnse_config.cmake  hcnse_config.h.in  hcnse_have.cmake  hcnse_options.cmake
dashboard/: Makefile
docs/: Doxyfile  coding-style.txt
include/: hcnse.release.h  hcnse_array.h  hcnse_command.h  hcnse_common.h  hcnse_config.h  hcnse_connection.h  hcnse_core.h  hcnse_cpuinfo.h  hcnse_cycle.h  hcnse_dso.h  hcnse_errno.h  hcnse_event.h  hcnse_file.h  hcnse_filesys.h  hcnse_limits.h  hcnse_list.h  hcnse_listen.h  hcnse_log.h  hcnse_memory.h  hcnse_module.h  hcnse_mutex.h  hcnse_parse.h  hcnse_pool.h  hcnse_portable.h  hcnse_portable_darwin.h  hcnse_portable_freebsd.h  hcnse_portable_linux.h  hcnse_portable_solaris.h  hcnse_portable_win32.h  hcnse_process.h  hcnse_rbtree.h  hcnse_regex.h  hcnse_release.h  hcnse_semaphore.h  hcnse_send.h  hcnse_signal.h  hcnse_sockaddr.h  hcnse_socket.h  hcnse_sockopt.h  hcnse_string.h  (+4 more)
include/container/: hcnse.container.array.h  hcnse.container.list.h  hcnse.container.rbtree.h
include/core/: hcnse.core.command.h  hcnse.core.connection.h  hcnse.core.cycle.h  hcnse.core.event.h  hcnse.core.listen.h  hcnse.core.log.h  hcnse.core.module.h  hcnse.core.parse.h  hcnse.core.server.h
include/floppix/: release.h
include/system/: hcnse.system.cpuinfo.h  hcnse.system.dso.h  hcnse.system.errno.h  hcnse.system.filesys.h  hcnse.system.limits.h  hcnse.system.memory.h  hcnse.system.pool.h  hcnse.system.process.h  hcnse.system.signal.h  hcnse.system.thread.h  hcnse.system.time.h
include/type/: hcnse.type.forwards.h
include/util/: hcnse.util.bitmask.h  hcnse.util.string.h
modules/test1/: Makefile
sample/config/: floppix.conf  floppix_win32.conf  hcnse.conf  hcnse_win32.conf
sample/sample-config-files/: hcnse.conf  hcnse_header.conf  hcnse_win32.conf
server/: Makefile  TODO
server/include/: config.h  connection.h  cycle.h  errors.h  events.h  hcnse_config.h  hcnse_connection.h  hcnse_core.h  hcnse_cpuinfo.h  hcnse_cycle.h  hcnse_dso.h  hcnse_errno.h  hcnse_error.h  hcnse_errors.h  hcnse_event.h  hcnse_events.h  hcnse_file.h  hcnse_files.h  hcnse_list.h  hcnse_log.h  hcnse_memory.h  hcnse_mempool.h  hcnse_module.h  hcnse_mutex.h  hcnse_mutexes.h  hcnse_pool.h  hcnse_portable.h  hcnse_portable_darwin.h  hcnse_portable_freebsd.h  hcnse_portable_linux.h  hcnse_portable_solaris.h  hcnse_portable_win32.h  hcnse_portable_windows.h  hcnse_process.h  hcnse_regex.h  hcnse_release.h  hcnse_semaphore.h  hcnse_semaphores.h  hcnse_signal.h  hcnse_signals.h  (+20 more)
server/test/: Makefile  hcnse_unit_test.c  hcnse_unit_test.h  test.c  test_hcnse_list.c  test_hcnse_list.h
src/algo/: array.c  fpx.algo.array.c  fpx.algo.array.h  fpx.algo.list.c  fpx.algo.list.h  fpx.algo.rbtree.c  fpx.algo.rbtree.h  list.c
src/container/: hcnse.container.array.c  hcnse.container.list.c  hcnse.container.rbtree.c
src/core/: command.c  connection.c  cycle.c  event.h  fpx.core.command.c  fpx.core.command.h  fpx.core.connection.c  fpx.core.connection.h  fpx.core.cycle.c  fpx.core.cycle.h  fpx.core.event.h  fpx.core.forwards.h  fpx.core.listen.c  fpx.core.listen.h  fpx.core.log.c  fpx.core.log.h  fpx.core.module.c  fpx.core.module.h  fpx.core.parse.c  fpx.core.parse.h  fpx.core.release.h  fpx.core.server.c  fpx.core.server.h  hcnse.core.command.c  hcnse.core.connection.c  hcnse.core.cycle.c  hcnse.core.listen.c  hcnse.core.log.c  hcnse.core.module.c  hcnse.core.parse.c  hcnse.core.server.c  hcnse_array.c  hcnse_config.c  hcnse_connection.c  hcnse_core.c  hcnse_cycle.c  hcnse_event.c  hcnse_list.c  hcnse_listen.c  hcnse_log.c  (+13 more)
src/event/: hcnse_event_connect.c  hcnse_event_read.c  hcnse_event_timer.c  hcnse_event_write.c
src/os/: hcnse_cpuinfo.c  hcnse_dso.c  hcnse_epoll.c  hcnse_errno.c  hcnse_file.c  hcnse_filesys.c  hcnse_iocp.c  hcnse_memory.c  hcnse_mutex.c  hcnse_process.c  hcnse_select.c  hcnse_semaphore.c  hcnse_send.c  hcnse_signal.c  hcnse_sockaddr.c  hcnse_socket.c  hcnse_sockopt.c  hcnse_thread.c  hcnse_time.c
src/system/: cpuinfo.c  dso.c  errno.c  filesys.c  fpx.system.cpuinfo.c  fpx.system.cpuinfo.h  fpx.system.dso.c  fpx.system.dso.h  fpx.system.errno.c  fpx.system.errno.h  fpx.system.filesys.c  fpx.system.filesys.h  fpx.system.memory.c  fpx.system.memory.h  fpx.system.pool.c  fpx.system.pool.h  fpx.system.process.c  fpx.system.process.h  fpx.system.signal.c  fpx.system.signal.h  fpx.system.thread.c  fpx.system.thread.h  fpx.system.time.c  fpx.system.time.h  fpx.system.type.h  hcnse.system.cpuinfo.c  hcnse.system.dso.c  hcnse.system.errno.c  hcnse.system.filesys.c  hcnse.system.memory.c  hcnse.system.pool.c  hcnse.system.process.c  hcnse.system.signal.c  hcnse.system.thread.c  hcnse.system.time.c  memory.c  pool.c  process.c  signal.c  thread.c  (+1 more)
src/util/: fpx.util.bitmask.h  fpx.util.string.c  fpx.util.string.h  hcnse.util.string.c  string.c
test/: CMakeLists.txt  Makefile  hcnse_stubs.c  hcnse_test.c  test1.c  test_hcnse_pool.c  test_hcnse_pool.h
test/include/: fpx.test.h  hcnse_test.h
test/unit/: fpx.test.unit.pool.c  fpx.test.unit.pool.h  fpx.test.unit.stubs.c  fpx.test.unit.stubs.h  hcnse_stubs.c  hcnse_stubs.h  test.c  test_hcnse_pool.c  test_hcnse_pool.h
(+264 files in other folders)
